# TMCs

./: CMakeLists.txt  README
TMCsrc/: TMC.cpp  TMC.h  hyp_2F1.h
cubature/: hcubature.c  pcubature.c  test.c
example/: MainTMC.cpp  TMCdummy
